--- a/src/MyLab.BlazorClient/MainLayout.razor
+++ b/src/MyLab.BlazorClient/MainLayout.razor
@@ -1,99 +1,70 @@
 ﻿@inherits LayoutComponentBase
 
-<header class="navbar navbar-expand-md navbar-light bg-light">
-    <nav class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
-</header>
-<main role="main" class="container">
-    <div class="row">
-        <div class="col-2">
-            <span>MyLab.BlazorClient</span>
-            <hr>
-            <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-                    The current link item
+<div class="d-flex flex-row">
+    <sidebar class="d-flex flex-column flex-shrink-0 p-3 left-site">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+            <span class="navbar-brand">Sidebar</span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item">
+                <a href="#" class="nav-link active" aria-current="page">
+                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+                    Home
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">A second link item</a>
-                <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-                <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-                <a class="list-group-item list-group-item-action disabled">A disabled link item</a>
-            </div>
-        </div>
-        <div class="col" style="background: lightgray">
-            <div class="d-flex flex-column">
-                <div id="header" class="flex-row">
-                    <div>root/orders/my</div>
-                </div>
-                <div id="content">
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                    Some content here
-                    <br>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-    </div>
-</footer>
+            </li>
+            <li>
+                <a href="#" class="nav-link">
+                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+                    Dashboard
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">
+                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+                    Orders
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">
+                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+                    Products
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">
+                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+                    Customers
+                </a>
+            </li>
+        </ul>
+    </sidebar>
 
-@code {
+    <div class="d-flex right-site flex-column flex-fill">
+        <header class="border-bottom px-4">
+            <nav class="navbar">
+                <div class="navbar-brand">
+                    My Favorit Portal
+                </div>
+                <div>
+                    <dev class="header-item">John J.J.</dev>
+                    <dev class="header-item">
+                        <i class="bi bi-box-arrow-right"></i>
+                        <span>Exit</span>
+                    </dev>
+                </div>
+            </nav>
+        </header>
 
-}
+        <main class="flex-grow-1 px-4 container">
+            @Body
+        </main>
+
+        <footer class="px-4 border-top">
+            <div class="my-3">
+                <span>© 2021 Company, Inc. All rights reserved.</span>
+            </div>
+        </footer>
+    </div>
+</div>
