Change theme to dark blue

--- a/src/MyLab.BlazorClient/MainLayout.razor
+++ b/src/MyLab.BlazorClient/MainLayout.razor
@@ -42,7 +42,7 @@
     </sidebar>
 
     <div class="d-flex right-site flex-column flex-fill">
-        <header class="border-bottom px-4">
+        <header class="border-bottom px-4 content-area">
             <nav class="navbar">
                 <div class="navbar-brand">
                     My Favorit Portal
@@ -61,10 +61,10 @@
             @Body
         </main>
 
-        <footer class="px-4 border-top">
+        <footer class="px-4 border-top content-area">
             <div class="my-3">
                 <span>© 2021 Company, Inc. All rights reserved.</span>
             </div>
-        </footer>
+        </footer>   
     </div>
 </div>
