--- a/src/MyLab.BlazorClient/MainLayout.razor
+++ b/src/MyLab.BlazorClient/MainLayout.razor
@@ -1,45 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="d-flex flex-row">
-    <sidebar class="d-flex flex-column flex-shrink-0 p-3 left-site">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="navbar-brand">Sidebar</span>
-        </a>
-        <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-                    Home
-                </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                    Dashboard
-                </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-                    Orders
-                </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-                    Products
-                </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                    Customers
-                </a>
-            </li>
-        </ul>
-    </sidebar>
+    
+    <NavMenu/>
 
     <div class="d-flex right-site flex-column flex-fill">
         <header class="border-bottom px-4 content-area">
@@ -65,6 +28,9 @@
             <div class="my-3">
                 <span>© 2021 Company, Inc. All rights reserved.</span>
             </div>
-        </footer>   
+        </footer>
     </div>
 </div>
+
+@code{
+}
