--- a/src/MyLab.BlazorClient/MainLayout.razor.css
+++ b/src/MyLab.BlazorClient/MainLayout.razor.css
@@ -1,30 +1,10 @@
 ﻿.right-site {
     min-height: 100vh;
-    background-color: #f4f7fa;
-}
-
-.left-site {
-    width: 280px;
-}
-
-.left-site a.nav-link {
-    color: #a9b1b9;
-}
-
-.left-site a.nav-link:hover {
-    color: #e2e5e8;
-}
-
-.left-site a.nav-link.active {
-    color: #e2e5e8;
-}
-
-.nav-pills .nav-link.active {
-    background: none;
+    background-color: var(--mylab-bg-color);
 }
 
 .content-area {
-    background: white
+    background: var(--mylab-content-area-color)
 }
 
 .header-item {
@@ -36,9 +16,9 @@ main {
 }
 
 .text-regular {
-    color: #76818a;
+    color: var(--mylab-text-regular-color);
 }
 
 .text-header {
-    color: #495057;
+    color: var(--mylab-text-header-color);
 }
