Improve man layout

--- a/src/MyLab.BlazorClient/MainLayout.razor.css
+++ b/src/MyLab.BlazorClient/MainLayout.razor.css
@@ -12,13 +12,12 @@
 }
 
 main {
-    margin-left: 0;
 }
 
-.text-regular {
-    color: var(--mylab-text-regular-color);
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    color: var(--mylab-text-header-color);
 }
 
-.text-header {
+.navbar-brand {
     color: var(--mylab-text-header-color);
 }
