--- a/src/MyLab.BlazorClient/MainLayout.razor
+++ b/src/MyLab.BlazorClient/MainLayout.razor
@@ -20,8 +20,15 @@
             </nav>
         </header>
 
-        <main class="flex-grow-1 px-4 container">
-            @Body
+        <main class="flex-grow-1 m-4 content-area">
+            <div class="d-flex flex-column">
+                <div class="border ps-4 py-3">
+                    <div class="h6 mb-0">Header</div>
+                </div>
+                <div class="container mx-0 p-4">
+                    @Body
+                </div>
+            </div>
         </main>
 
         <footer class="px-4 border-top content-area">
